Orden de juegos

--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
-        <title>Piedra papel o tijera</title>
-        <script src="js/pptls.js" type="text/javascript" charset="utf-8"></script>
+        <title>Juegos en Javascript</title>
         
     </head>
     <body>
-        <h1>Jan ken pon lagarto spock!</h1>
+        <h1 href="random.html">Jan ken pon lagarto spock!</h1>
     </body>
 </html>
 
