--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         
     </head>
     <body>
-        <h1 href="random.html">Jan ken pon lagarto spock!</h1>
+    <a href="random.html"><h1>Jan ken pon lagarto spock!</h1></a>
     </body>
 </html>
 
