agregada descripcion para jugar de nuevo

--- a/random.html
+++ b/random.html
@@ -7,7 +7,8 @@
         
     </head>
     <body>
-        <h1>Jan ken pon lagarto spock!</h1>
+    <a href="random.html"><h1>Jan ken pon lagarto spock!</h1></a>
+    <p>Si quieres jugar de nuevo, pulsa sobre el titulo del juego</p>
     </body>
 </html>
 
