remplazando alert por HTML

--- a/random.html
+++ b/random.html
@@ -8,6 +8,13 @@
     </head>
     <body>
     <a href="random.html"><h1>Jan ken pon lagarto spock!</h1></a>
+    <label for="">Ingresa el número de tu movimiento: </label>
+    <input type="text" name="player" id="player" value="" />
+    <br />
+    <br />
+    <label for="">Hint:<br />Piedra: 0 <br />Papel: 1 <br />Tijera: 2 <br />Lagarto: 3 <br />Spock: 4</label>
+    <input type="button" name="sub" id="sub" value="1, 2, 3!" onclick="winner()"/>
+    <p id="ganador"></p>
     <p>Si quieres jugar de nuevo, pulsa sobre el titulo del juego</p>
     </body>
 </html>
