--- a/random.html
+++ b/random.html
@@ -9,7 +9,7 @@
     <body>
     <a href="random.html"><h1>Jan ken pon lagarto spock!</h1></a>
     <label for="">Ingresa el número de tu movimiento: </label>
-    <input type="text" name="player" id="player" value="" />
+    <input type="number" name="player" id="player" value="" />
     <br />
     <br />
     <label for="">Hint:<br />Piedra: 0 <br />Papel: 1 <br />Tijera: 2 <br />Lagarto: 3 <br />Spock: 4</label>
