cambio los alert por etiqueta P

--- a/random.html
+++ b/random.html
@@ -7,15 +7,16 @@
         
     </head>
     <body>
-    <a href="random.html"><h1>Jan ken pon lagarto spock!</h1></a>
+    <h1>Jan ken pon lagarto spock!</h1>
     <label for="">Ingresa el número de tu movimiento: </label>
     <input type="number" name="player" id="player" value="" />
+    <input type="button" name="sub" id="sub" value="Juega!" onclick="winner()"/>
     <br />
     <br />
     <label for="">Hint:<br />Piedra: 0 <br />Papel: 1 <br />Tijera: 2 <br />Lagarto: 3 <br />Spock: 4</label>
-    <input type="button" name="sub" id="sub" value="1, 2, 3!" onclick="winner()"/>
+        <br/>
     <p id="ganador"></p>
-    <p>Si quieres jugar de nuevo, pulsa sobre el titulo del juego</p>
+    <p>Si quieres jugar de nuevo, pulsa  <a href="random.html">Aquí</a></p>
     </body>
 </html>
 
