aplicando valor por default al textbox

--- a/random.html
+++ b/random.html
@@ -9,13 +9,13 @@
     <body>
     <h1>Jan ken pon lagarto spock!</h1>
     <label for="">Ingresa el número de tu movimiento: </label>
-    <input type="number" name="player" id="player" value="" />
+    <input type="number" name="player" id="player" value="4" />
     <input type="button" name="sub" id="sub" value="Juega!" onclick="winner()"/>
     <br />
     <br />
     <label for="">Hint:<br />Piedra: 0 <br />Papel: 1 <br />Tijera: 2 <br />Lagarto: 3 <br />Spock: 4</label>
         <br/>
-    <p id="ganador"></p>
+    <h3 id="ganador"></h3>
     <p>Si quieres jugar de nuevo, pulsa  <a href="random.html">Aquí</a></p>
     </body>
 </html>
