agregado color al resultado del ganador

--- a/random.html
+++ b/random.html
@@ -15,7 +15,7 @@
     <br />
     <label for="">Hint:<br />Piedra: 0 <br />Papel: 1 <br />Tijera: 2 <br />Lagarto: 3 <br />Spock: 4</label>
         <br/>
-    <h3 id="ganador"></h3>
+        <h3><font id="ganador" color="red"></font></h3>
     <p>Si quieres jugar de nuevo, pulsa  <a href="random.html">Aquí</a></p>
     </body>
 </html>
