Agregado campo minado al front

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
     <a href="random.html"><h1>Jan ken pon lagarto spock!</h1></a>
+    <a href="minefield.html"><h1>Campo minado!</h1></a>
     </body>
 </html>
 
