Agrega opcion para volver al salon de juegos

--- a/minefield.html
+++ b/minefield.html
@@ -49,5 +49,8 @@
 	<div>
 		<input style="display:none;" type="number" name="counter" id="counter" value="" >
 	</div>
+	<div>
+		<a href="index.html">Volver al salon de juegos</a>
+	</div>
 </body>
 </html>
